<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#000000"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical">

	<TableLayout android:id="@+id/tracker_view"
		android:layout_width="fill_parent" android:layout_height="136sp"
		android:orientation="vertical" android:stretchColumns="0,1">

		<TableRow android:layout_width="fill_parent"
			android:layout_height="24sp">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="24sp">

				<TextView android:id="@+id/trackerExpeditionLabel"
					android:text="@string/trackerExpeditionLabel" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<TextView android:id="@+id/trackerExpedition"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="12sp" android:textColor="#ffffff"
					android:text="@string/trackerExpedition"
					android:layout_centerHorizontal="true" />
					
				<TextView android:id="@+id/trackerSwathLabel" android:text="@string/trackerSwathLabel"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="10sp" />


				<TextView android:id="@+id/trackerSwath"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="12sp" android:textColor="#ffffff" 
					android:text="@string/trackerSwath"
					android:layout_marginLeft="5sp"
					android:layout_centerHorizontal="true" />		
					
				<TextView android:id="@+id/trackerMinDistLabel"
					android:text="@string/trackerMinDistLabel" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginLeft="10sp" />

				<TextView android:id="@+id/trackerMinDistance"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="12sp" android:textColor="#ffffff"
					android:layout_marginLeft="5sp"
					android:text="@string/trackerMinDistance"
					android:layout_centerHorizontal="true" />								

				<TextView android:id="@+id/trackerPointsLabel"
					android:text="@string/trackerPointsLabel" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginLeft="10sp" />

				<TextView android:id="@+id/trackerPoints"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="5sp"
					android:textSize="12sp" android:textColor="#ffffff" android:text="@string/trackerPoints"
					android:layout_centerHorizontal="true" />

			</LinearLayout>

		</TableRow>


		<TableRow android:layout_width="fill_parent"
			android:layout_height="24sp">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="24sp">


				<TextView android:id="@+id/trackerStatusLabel"
					android:text="@string/trackerStatusLabel" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />


				<TextView android:id="@+id/trackerStatus"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="12sp" android:textColor="#ffffff" android:text="@string/trackerStatus"
					android:layout_centerHorizontal="true" />


			</LinearLayout>
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="24sp">

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="24sp">

				<TextView android:id="@+id/trackerLabel" android:text="@string/trackerLabel"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
					
				<TextView android:id="@+id/trackerLocation"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="12sp" android:textColor="#ffffff"
					android:text="@string/trackerDefaultLocation"
					android:layout_marginLeft="10sp" 
					android:layout_centerHorizontal="true" />					

			</LinearLayout>
		</TableRow>

		<TableRow android:layout_width="fill_parent"
			android:layout_height="60sp">
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="60sp">

				<Button 
					android:id="@+id/idTrackerButton" 
					android:layout_width="105dp" 
					android:layout_height="50dp" 
					android:drawableLeft  ="@drawable/play_icon"
					android:text="Start" />
					
				<Button 
					android:id="@+id/idTrackerSettingsButton" 
					android:layout_width="105dp" 
					android:layout_height="50dp" 
					android:drawableLeft  ="@drawable/settings_32"
					android:text="Settings" />	
					
				<Button 
					android:id="@+id/idTrackerListButton" 
					android:layout_width="105dp" 
					android:layout_height="50dp" 
					android:drawableLeft  ="@drawable/save_32"
					android:text="Save" />	
														
			</LinearLayout>
		</TableRow>
					

	</TableLayout>


	<include android:layout_width="fill_parent" layout="@layout/map_main" />


</LinearLayout>

