<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  
 <LinearLayout 
    android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="vertical">
     <TextView 
		android:id="@+id/registerDeviceTitle"
		android:text="@string/registerDeviceTitle"
		android:textSize="15.5sp"
		android:textColor="#FFF"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:layout_marginBottom="10dp"
		android:visibility="visible"/>

  	<TextView 
		android:id="@+id/emailLabel"
		android:text="@string/emailLabelText"
		android:textSize="14.5sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
	/>

	<EditText
        android:id="@+id/email"
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:inputType="textEmailAddress|textAutoComplete"
	/>
	
    <TextView 
		android:id="@+id/passwordLabel"
		android:text="@string/passwordLabelText"
		android:textSize="14.5sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		/>
	<EditText
        android:id="@+id/password"
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:password="true"
        android:inputType="textPassword"/>



         	      
 	<LinearLayout
  	  android:layout_width="fill_parent"
  	  android:layout_height="fill_parent"
	    android:orientation="horizontal">
	     <LinearLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
	    	<TextView
	   	     android:id="@+id/serverLabel"
	       	 android:layout_width="wrap_content"
	    	 android:layout_height="20dp"
	       	 android:textSize="14.5sp"
	       	 android:text="@string/registerServerLabel"/>  
			<TextView
	   	     android:id="@+id/serverName"
	       	 android:layout_width="wrap_content"
	    	 android:layout_height="20dp"
	       	 android:textSize="14.5sp"
	       	 android:text="@string/defaultServer"/>   
		</LinearLayout> 
	       	
	 
	</LinearLayout>
        	      
	 <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
	
	 
	 		 <Button 
	 		 	android:id="@+id/editServer"
	 			android:layout_width="150dp"
			   	android:layout_height="40dp"
	   			android:layout_alignParentLeft="true"
				android:text="Change Server" 
				android:visibility="gone"/>	  
	      
			<Button 
				android:id="@+id/registerUsingBarcodeButton" 
	   			android:layout_width="170dp"
	    		android:layout_height="40dp"
				android:text="Register with Barcode"
				android:layout_toRightOf="@+id/createaccount" />
				
		  	     <Button 
			android:id="@+id/registerDeviceButton" 
	    	android:layout_width="140dp"
	    	android:layout_height="40dp"
			android:text="@string/login" />
				
	
	</LinearLayout>	


	       
		
		 	<Button android:id="@+id/createaccount"
	    		android:layout_width="150dp"
		    	android:layout_height="40dp"
		    	android:layout_gravity="left"
		    	android:text="Create Account"
		    	android:visibility="gone"/>

   
	
	</LinearLayout>

</ScrollView>
