<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
   	<TextView 
		android:id="@+id/projectNameLabel"
		android:text="@string/projectNameLabel"
		android:textSize="14.5sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"/>

	<EditText
        android:id="@+id/projectName"
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:inputType ="textCapSentences"/>
	
	  	<TextView 
		android:id="@+id/projectDescriptionLabel"
		android:text="@string/projectDescriptionLabel"
		android:textSize="14.5sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left"/>

	<EditText
        android:id="@+id/projectDescription"
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:layout_gravity="fill_horizontal"
        android:inputType ="textCapSentences"/>

	<TextView
	    android:id="@+id/porjectFindTypeLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/projectFindTypeLabel"
	    android:textSize="14.5sp" />

	<RelativeLayout
	    android:id="@+id/find_relative_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<ImageButton
		    android:id="@+id/find_info_btn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
	    	android:background="@null"
		    android:src="@drawable/question_mark" />

		<Spinner
		    android:id="@+id/projectFindType"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentTop="true"
		    android:layout_toLeftOf="@+id/find_info_btn"
		    android:drawSelectorOnTop="true" />

	</RelativeLayout>
        
 	<Button android:id="@+id/createProject"
    	android:layout_width="150dp"
    	android:layout_height="40dp"
    	android:layout_gravity="left"
    	android:text="@string/createProjectButton" />
	
</LinearLayout>
